<resources>
    <string name="preference_screen" translatable="false">preference_screen</string>
    <string name="ab" translatable="false">A-B</string>
    <string name="ok">OK</string>
    <string name="create">Create</string>
    <string name="loading">Loading…</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="saved">Saved</string>
    <string name="checkout_this_track">Check out %s with the new Frolomuse Music Player!</string>
    <string name="share_track">Share track</string>
    <string name="share_tracks">Share audio collection</string>
    <string name="sorry_exception">Sorry, something went wrong</string>
    <string name="app_prefs">App preferences</string>
    <string name="about">About</string>
    <string name="current_playlist_is_empty">There are no songs in the current playlist.\n
        Please choose another</string>
    <string name="pick_image">Pick Image</string>
    <string name="file">File</string>
    <string name="added_to_queue">Added to queue</string>
    <string name="deleted">Deleted</string>
    <string name="will_be_played_next">Will be played next</string>
    <string name="set_as_default">Set as default</string>
    <string name="folder_is_default_message">The file browser will now open from this folder</string>
    <string name="hide">Hide</string>
    <string name="message_one_file_hidden">The file has been hidden. You can return it back in the settings</string>
    <string name="message_multiple_files_hidden">The selected files have been hidden. You can return them back in the settings</string>
    <string name="scan_files">Scan files</string>
    <string name="hidden_files">Hidden files</string>
    <string name="hidden_files_desc">Files that are hidden in the file browser</string>
    <string name="hidden_files_placeholder_message">
        You have no hidden files yet. To hide a file, select the appropriate option in the file browser.
    </string>
    <string name="sort">Sort</string>
    <string name="ascending">Ascending</string>
    <string name="sort_by_default">By default</string>
    <string name="sort_by_name">By name</string>
    <string name="sort_by_artist">By artist</string>
    <string name="sort_by_album">By album</string>
    <string name="sort_by_number_of_songs">By number of songs</string>
    <string name="sort_by_number_of_tracks">By number of tracks</string>
    <string name="sort_by_number_of_albums">By number of albums</string>
    <string name="sort_by_date_added">By date added</string>
    <string name="sort_by_date_modified">By date modified</string>
    <string name="sort_by_filename">By filename</string>
    <string name="sort_by_play_order">By play order</string>
    <string name="sort_by_duration">By duration</string>
    <string name="would_you_rate">Would you rate this app for 5 stars?</string>
    <string name="no">No</string>
    <string name="remind_me_later">Ask me later</string>
    <string name="rate">Yes, I like it!</string>
    <string name="now_playing">Now playing</string>
    <string name="queue">Queue</string>
    <string name="current_song_queue">Current song queue</string>
    <string name="save_as_playlist">Save as playlist</string>
    <string name="no_songs_in_queue">No songs in the queue</string>
    <string name="track">Track</string>
    <string name="album">Album</string>
    <string name="artist">Artist</string>
    <string name="genre">Genre</string>
    <string name="select_playlist">Select playlist</string>
    <string name="select_playlist_to_which_you_want_to_add_music">
        Select playlist to which you want to add music
    </string>
    <string name="add_song_to_s_playlist_hint">
        Select songs you want to add to the \"%s\" playlist and then click the \'Add to playlist\' button
    </string>
    <plurals name="s_songs_selected">
        <item quantity="one">%d song selected</item>
        <item quantity="other">%d songs selected</item>
    </plurals>
    <plurals name="s_songs">
        <item quantity="one">%d song</item>
        <item quantity="other">%d songs</item>
    </plurals>
    <plurals name="s_hours">
        <item quantity="one">%d hour</item>
        <item quantity="other">%d hours</item>
    </plurals>
    <plurals name="s_minutes">
        <item quantity="one">%d min</item>
        <item quantity="other">%d mins</item>
    </plurals>
    <plurals name="s_seconds">
        <item quantity="one">%d second</item>
        <item quantity="other">%d seconds</item>
    </plurals>
    <string name="select_all">Select all</string>
    <string name="placeholder_unknown">Unknown</string>
    <string name="placeholder_zero_duration">0:00</string>
    <string name="placeholder_freq_range">0.00 hz</string>
    <string name="play">Play</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="delete_from_playlist">Delete from playlist</string>
    <string name="delete_from_device">Delete from phone</string>
    <string name="add_to_playlist">Add to playlist</string>
    <string name="share">Share</string>
    <string name="playlist">Playlist</string>
    <string name="add_to_queue">Add to queue</string>
    <string name="edit_song_tags">Edit song tags</string>
    <string name="edit_album_cover">Edit album cover</string>
    <string name="view_album_cover">View album cover</string>
    <string name="view_album">View album</string>
    <string name="view_artist">View artist</string>
    <string name="create_poster">Create poster</string>
    <string name="play_next">Play next</string>
    <string name="cut_ringtone">Cut ringtone</string>
    <string name="add_song">Add song</string>
    <string name="remove_from_queue">Remove from current queue</string>
    <string name="confirmation">Confirmation</string>
    <string name="confirmation_delete_item">Are you sure you want to delete this item?</string>
    <string name="confirmation_delete_items">Are you sure you want to delete these items?</string>
    <string name="confirmation_delete_item_and_related_song_files">
        Are you sure you want to delete this item? All music files contained therein will also be deleted.
    </string>
    <string name="confirmation_delete_items_and_related_song_files">
        Are you sure you want to delete these items? All music files contained in them will also be deleted.
    </string>
    <string name="all_songs">All music</string>
    <string name="songs">Songs</string>
    <string name="artists">Artists</string>
    <string name="genres">Genres</string>
    <string name="albums">Albums</string>
    <string name="playlists">Playlists</string>
    <string name="folders">Folders</string>
    <string name="recently_added">Recently added</string>
    <string name="most_played">Most played</string>
    <string name="number_of_albums">%d albums</string>
    <string name="one_album">1 album</string>
    <string name="no_albums">No albums</string>
    <string name="no_tracks">No tracks</string>
    <string name="one_track">1 track</string>
    <string name="number_of_tracks">%d tracks</string>
    <string name="added">Added</string>
    <string name="recent_period">Recent period</string>
    <string name="for_last_hour">For last hour</string>
    <string name="for_last_day">For last day</string>
    <string name="for_last_week">For last week</string>
    <string name="for_last_month">For last month</string>
    <string name="for_last_year">For last year</string>
    <string name="not_played_yet">Not played yet</string>
    <string name="last_time_s">Last time: %s</string>
    <plurals name="played_s_times">
        <item quantity="one">Played %d time</item>
        <item quantity="other">Played %d times</item>
    </plurals>
    <string name="nav_library">Library</string>
    <string name="nav_equalizer">Equalizer</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_search">Search</string>
    <string name="nav_favourite">Favourite</string>
    <string name="playback_settings">Playback</string>
    <string name="library_settings">Library</string>
    <string name="appearance_settings">Appearance</string>
    <string name="about_app_settings">About</string>
    <string name="version">Application version</string>
    <string name="licenses">Licenses</string>
    <string name="app_theme_desc">Select and apply a theme for the app</string>
    <string name="page_s_of_s">%d of %d</string>
    <string name="apply_theme">Apply Theme</string>
    <string name="applied">Applied</string>
    <string name="dark_red_theme">Dark red theme</string>
    <string name="light_blue_theme">Light blue theme</string>
    <string name="light_pink_theme">Light pink theme</string>
    <string name="dark_blue_theme">Dark blue theme</string>
    <string name="dark_especial_theme">Dark especial theme</string>
    <string name="dark_purple_theme">Dark purple theme</string>
    <string name="dark_orange_theme">Dark orange theme</string>
    <string name="dark_green_theme">Dark green theme</string>
    <string name="pause_playback">Pause playback</string>
    <string name="resume_playback">Resume playback</string>
    <string name="pause_when_headphones_are_disconnected">
        Pause playback when headphones are disconnected
    </string>
    <string name="resume_when_headphones_are_connected">
        Resume playback when headphones are connected
    </string>
    <string name="sleep_timer">Sleep timer</string>
    <string name="sleep_time_description">Set a timer to stop playing</string>
    <string name="you_have_already_set_up_sleep_timer">You have already set up a timer.
        \nDo You want to reset the current timer or set up a new one?</string>
    <string name="rate_this_app">Rate this app</string>
    <string name="rate_this_app_if_you_want">If you like this app you can rate it on Play Market</string>
    <string name="share_this_app">Share this app</string>
    <string name="share_this_app_if_you_want">You can help this app grow if you share it with friends</string>
    <string name="help_with_translations">Help with translations</string>
    <string name="help_with_translations_desc">Tap here if You want to help with translations</string>
    <string name="library_sections">Library sections</string>
    <string name="library_sections_desc">Library sections you want to see and their order</string>
    <string name="rescan_media_library_desc">Scanning media library helps the app find new audio files</string>
    <string name="playback_fading">Playback fading</string>
    <string name="playback_fading_desc">Control how the playback should fade in and out</string>
    <string name="playback_fading_full_desc">
        Here you control how the playback should fade in and out. You can set a suitable duration using the slider below. Duration "0" means that there will be no fading.
    </string>
    <string name="playback_fading_duration">Duration</string>
    <string name="playback_params">Playback Params</string>
    <string name="speed">Speed</string>
    <string name="pitch">Pitch</string>
    <string name="normalize">Normalize</string>
    <string name="app_theme">App Theme</string>
    <string name="third_part_libs">Third-party libs</string>
    <string name="album_grid">Album grid</string>
    <string name="show_album_grid">Use the grid to display albums</string>
    <string name="rescan_media_library">Rescan media library</string>
    <string name="create_shortcut">Create shortcut</string>
    <string name="exclude_short_songs">Exclude short songs</string>
    <string name="exclude_short_songs_desc">Exclude short songs from the library search</string>
    <string name="player_journal">Player log</string>
    <string name="player_journal_desc">Display all messages from the player log</string>
    <string name="buy_premium">Buy premium</string>
    <string name="buy_premium_desc">Remove ads and unlock premium features</string>
</resources>