<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_edit"
        android:title="@string/edit"
        android:icon="@drawable/ic_edit"
        app:iconTint="?colorOnPrimary"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/action_create_shortcut"
        android:title="@string/create_shortcut"
        android:icon="@drawable/ic_shortcut_18dp"
        app:iconTint="?colorOnPrimary"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/action_sort"
        android:title="@string/sort"
        android:icon="@drawable/ic_sort"
        app:iconTint="?colorOnPrimary"
        app:showAsAction="always"/>
</menu>