<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    style="@style/Layout.Dialog.Content">

    <androidx.appcompat.widget.AppCompatTextView
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:id="@+id/tv_title"
        android:text="@string/playback_params"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        style="@style/Text.Dialog.Title" />

    <com.frolo.muse.views.ControllerView
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_title"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"
        android:id="@+id/cv_speed"
        app:label="@string/speed"
        android:layout_width="0dp"
        android:layout_height="wrap_content" />

    <com.frolo.muse.views.ControllerView
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cv_speed"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"
        android:id="@+id/cv_pitch"
        app:label="@string/pitch"
        android:layout_width="0dp"
        android:layout_height="wrap_content" />

    <com.google.android.material.button.MaterialButton
        app:layout_constraintTop_toBottomOf="@id/cv_pitch"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginTop="16dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/normalize"
        android:id="@+id/btn_normalize"
        app:icon="@null"
        style="?attr/buttonAction" />

    <com.google.android.material.button.MaterialButton
        app:layout_constraintTop_toTopOf="@id/btn_normalize"
        app:layout_constraintEnd_toStartOf="@id/btn_normalize"
        app:layout_constraintBottom_toBottomOf="@id/btn_normalize"
        android:layout_marginEnd="12dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        android:id="@+id/btn_cancel"
        style="?attr/buttonCancel" />
</androidx.constraintlayout.widget.ConstraintLayout>