<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:id="@+id/ll_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="6dp"
        android:paddingRight="6dp"
        android:paddingBottom="16dp"
        android:paddingTop="32dp"
        android:layout_marginTop="56dp">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_margin="16dp"
            android:text="@string/would_you_rate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textAppearance="?textAppearanceHeadline4"/>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/btn_no"
                android:layout_height="match_parent"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:padding="16dp"
                android:text="@string/no"
                android:textAppearance="?textAppearanceButton"
                android:gravity="center"
                android:textSize="18sp"
                android:background="?selectableItemBackground"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/btn_rate"
                android:layout_height="match_parent"
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_marginStart="16dp"
                android:padding="16dp"
                android:textStyle="bold"
                android:text="@string/rate"
                android:textAppearance="?textAppearanceButton"
                android:gravity="center"
                android:textSize="20sp"
                android:background="?selectableItemBackground"/>
        </LinearLayout>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/btn_remind_later"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_margin="8dp"
            android:padding="8dp"
            android:text="@string/remind_me_later"
            android:textAppearance="?textAppearanceButton"
            android:gravity="center"
            android:background="?selectableItemBackground"/>
    </LinearLayout>

    <ImageView
        android:src="@drawable/ic_star"
        android:layout_gravity="top|center_horizontal"
        android:layout_margin="25dp"
        android:layout_width="55dp"
        android:layout_height="55dp"/>
</FrameLayout>