<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <androidx.appcompat.widget.AppCompatTextView
        style="?textAppearanceHeadline5"
        android:text="@string/hidden_files"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"/>

    <include
        layout="@layout/include_divider"
        android:layout_width="match_parent"
        android:layout_height="@dimen/vertical_divider_height"/>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <com.frolo.muse.views.spring.SpringRecyclerView
            android:paddingTop="12dp"
            android:paddingBottom="12dp"
            android:clipToPadding="false"
            android:id="@+id/rv_files"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:listitem="@layout/item_hidden_file"/>

        <com.frolo.muse.views.PlaceholderView
            android:id="@+id/view_placeholder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="24dp"
            app:image="@drawable/ic_hidden_80dp"
            app:message="@string/hidden_files_placeholder_message"/>

        <com.frolo.muse.views.progress.IBar
            android:id="@+id/pb_loading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"/>
    </FrameLayout>

    <include
        layout="@layout/include_divider"
        android:layout_width="match_parent"
        android:layout_height="@dimen/vertical_divider_height"/>

    <TextView
        android:id="@+id/btn_ok"
        style="?textAppearanceButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:padding="8dp"
        android:text="@string/ok"/>
</LinearLayout>